# Helium

./: LICENSE.txt  TODO.md  bun.lockb  knownIssues.md  package.json  readme.md
UserGuide/: UserGuide.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  test.md
src-tauri/src/: main.rs
src/script/: main.js
src/script/modules/: keys.js  settings.js  slide.js  spoiler.js  utils.js
